--- a/apps/logistics-frontend/wwwroot/index.html
+++ b/apps/logistics-frontend/wwwroot/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>logistics-system</title>
     <base href="/" />
-    <link href="css/site.css" rel="stylesheet" />
+    <!-- <link href="css/site.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="logistics-frontend.styles.css" rel="stylesheet" />
+    <script src="js/pageStyles.js"></script>
 </head>
 
 <body>
