feat: reusable Sidebar component - updated admin dashboard - updated sidebar style css properties

--- a/apps/logistics-frontend/wwwroot/index.html
+++ b/apps/logistics-frontend/wwwroot/index.html
@@ -9,6 +9,9 @@
     <!-- <link href="css/site.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/register.css" />
+    <link rel="stylesheet" href="css/sidebarStyles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="logistics-frontend.styles.css" rel="stylesheet" />
     <script src="js/pageStyles.js"></script>
