feat (frontend): Error handling, public page routing - add ServiceResult for better error and response handling from api calls - added public layout to app.razor for alt routing to authorized pages - add ErrorResponse to match error format from backend - add validation texts to create inv page - new landing page

--- a/apps/logistics-frontend/wwwroot/index.html
+++ b/apps/logistics-frontend/wwwroot/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>logistics-system</title>
     <base href="/" />
-    <!-- <link href="css/site.css" rel="stylesheet" /> -->
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="css/login.css" />
-    <link rel="stylesheet" href="css/register.css" />
-    <link rel="stylesheet" href="css/sidebarStyles.css" />
+
+    <!-- Global Tailwind-generated CSS -->
+    <link href="css/site.css" rel="stylesheet" />
+
+    <!-- Optional: If using Bootstrap for components (can conflict with Tailwind) -->
+    <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
+
+    <!-- Blazor styles -->
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="logistics-frontend.styles.css" rel="stylesheet" />
+
+    <!-- Optional: JS for dynamic styling/themes -->
     <script src="js/pageStyles.js"></script>
 </head>
 
