feat: major UI/UX improvements, toast service, and API integrations
- Added ToastService and Toast component outside <Router> in App.razor for global notifications
- Applied JSON serialization tags on Order model to align with DB JSON structure
- Introduced reusable modular components: ActionCard, MetricCard, and DashboardPanel
- Redesigned dashboard using new modular components for better layout and structure
- Overhauled Orders table with:
  - New layout and styling
  - Filter by search, status, and date
  - Indexed (numbered) rows
  - Modal-based view/edit with proper service method hookups
- Enhanced Navbar on auth pages and AuthorizedLayout to display logged-in user info
- Refactored SidebarComponent and SidebarItem to support Lucide icons (currently not rendering as expected)
- Extended OrderService and UserService with new methods to support frontend features

--- a/apps/logistics-frontend/wwwroot/index.html
+++ b/apps/logistics-frontend/wwwroot/index.html
@@ -9,6 +9,7 @@
 
     <!-- Global Tailwind-generated CSS -->
     <link href="css/site.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <!-- Optional: If using Bootstrap for components (can conflict with Tailwind) -->
     <!-- <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" /> -->
@@ -35,6 +36,14 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <!-- ✅ Lucide.js injection (add this!) -->
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      window.addEventListener('DOMContentLoaded', () => {
+        lucide.createIcons();
+      });
+    </script>
 </body>
 
 </html>
