--- a/apps/frontend/wwwroot/index.html
+++ b/apps/frontend/wwwroot/index.html
@@ -7,6 +7,7 @@
 	<title>fastabiz</title>
 	<base href="/" />
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 	<link href="css/site.css" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
