feat(frontend): mini cart dropdown + drawer animations
- added MiniCart component with remove-item action and checkout link
- implemented click-outside JS utility to close dropdowns
- updated StorefrontLayout to integrate MiniCart and dropdown control
- enhanced Drawer with smooth slide + fade animations (Tailwind keyframes)
- extended tailwind.config with custom drawer and backdrop animations
- patched CartService to support item removal and live count updates
- registered clickOutside script in index.html

--- a/apps/frontend/wwwroot/index.html
+++ b/apps/frontend/wwwroot/index.html
@@ -15,6 +15,7 @@
 
 	<script src="js/pageStyles.js" defer></script>
 	<script src="js/site.js"></script>
+	<script src="js/clickOutside.js"></script>
 </head>
 
 <body>
