--- a/apps/frontend/wwwroot/index.html
+++ b/apps/frontend/wwwroot/index.html
@@ -12,6 +12,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 	<link rel="icon" type="image/png" href="favicon.png" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
+	<!-- AwesomeMarkers CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css" />
+
+	<!-- AwesomeMarkers JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js"></script>
 
 	<script src="js/pageStyles.js" defer></script>
 	<script src="js/site.js"></script>
